# HORO-Project

./: .gitignore  Проект - Чорбаджийско хоро.docx
UML diagrams/: class_diagram.puml
src/: BuildManager.cpp  BuildManager.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  Dance.cpp  Dance.h  DanceBuilder.cpp  DanceBuilder.h  Dancer.cpp  Dancer.h  FileManager.cpp  FileManager.h  Horo.cpp  Horo.h  HoroBuilder.cpp  HoroBuilder.h  ModelManager.cpp  ModelManager.h  Presenter.cpp  Presenter.h  commands.txt  dancers.txt  main.cpp  model.cpp  model.h
src/UnitTests/: HoroTest.cpp
src/lib/googletest-master/googlemock/scripts/generator/: README.cppclean
src/lib/googletest-master/googletest/include/gtest/internal/: gtest-filepath.h
src/lib/googletest-master/googletest/src/: gtest-filepath.cc  gtest-port.cc  gtest.cc
